added view profiles

--- a/My Profile/talent-profile.html
+++ b/My Profile/talent-profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Job Seeker Profile | Astegni</title>
+    <title>John Doe - Talent Profile | Astegni</title>
     <link rel="stylesheet" href="../css/institute.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -279,7 +279,7 @@
 
                     <div class="profile-details-section">
                         <div class="profile-name-row">
-                            <h1 class="center-name" id="centerName">Job seeker Profile</h1>
+                            <h1 class="center-name" id="centerName">Talent Profile</h1>
                             <div class="badges-row">
                                 <span class="verified-badge">✓ Verified Professional</span>
                                 <span class="center-score">Profile Strength: 92%</span>
