--- a/My Profile tier 2/journalist-profile.html
+++ b/My Profile tier 2/journalist-profile.html
@@ -242,8 +242,8 @@
             <div class="profile-main-info">
                 <div class="profile-info-wrapper">
                     <div class="profile-avatar-container">
-                        <img src="../pictures/Journalist image 1.jpg"
-                            alt="Journailst profile" class="profile-avatar">
+                        <img src="../pictures/journalist image.jpg"
+                            alt="Journalist profile" class="profile-avatar">
 <span class="edit-icon profile-edit" onclick="openProfileUploadModal()">✏️</span>
                     </div>
 
