improved three pages

--- a/My Profile tier 2/Institute-profile.html
+++ b/My Profile tier 2/Institute-profile.html
@@ -1052,18 +1052,18 @@
                 <form id="editProfileForm">
                     <div class="form-section">
                         <label class="form-label">Company Name</label>
-                        <input type="text" class="form-input" id="companyName" value="Zenith Academy">
+                        <input type="text" class="form-input" id="companyName" placeholder="Company name">
                     </div>
 
                     <div class="form-section">
                         <label class="form-label">Locations</label>
                         <div id="locationsContainer">
                             <div class="location-item">
-                                <input type="text" class="form-input" value="Bole, Addis Ababa, Ethiopia">
+                                <input type="text" class="form-input" value="Location 1">
                                 <button type="button" class="btn-remove" onclick="removeLocation(this)">×</button>
                             </div>
                             <div class="location-item">
-                                <input type="text" class="form-input" value="Global Online">
+                                <input type="text" class="form-input" value="Location 2">
                                 <button type="button" class="btn-remove" onclick="removeLocation(this)">×</button>
                             </div>
                         </div>
@@ -1079,7 +1079,8 @@
                     <div class="form-section">
                         <label class="form-label">About Us</label>
                         <textarea class="form-textarea" id="aboutUs"
-                            rows="5">Zenith Academy is a premier online education platform specializing in film production, digital media, and creative arts. With over 5 years of excellence in education, we've trained thousands of students worldwide.</textarea>
+                            rows="5" placeholder="write something about you"></textarea>
+
                     </div>
 
                     <div class="form-section">
