--- a/View profile tier 1/view-student.html
+++ b/View profile tier 1/view-student.html
@@ -257,7 +257,7 @@
         <!-- Profile Header Section - Shows Student's Profile -->
         <section class="profile-header-section">
             <div class="cover-image-container">
-                <img src="../pictures/student cover.jpg" alt="Cover" class="cover-img">
+                <img src="../pictures/students cover.jpeg" alt="Cover" class="cover-img">
                 <div class="cover-overlay"></div>
             </div>
 
