--- a/My Profile tier 1/author-profile.html
+++ b/My Profile tier 1/author-profile.html
@@ -196,7 +196,7 @@
         <!-- Profile Header Section - Always Visible -->
         <section class="profile-header-section">
             <div class="cover-image-container">
-                <img src="../pictures/author cover.jpg" alt="Cover" class="cover-img">
+                <img src="../pictures/author cover.png" alt="Cover" class="cover-img">
 <span class="edit-icon cover-edit" onclick="openCoverUploadModal()">✏️</span>
                 <div class="cover-overlay"></div>
             </div>
@@ -204,7 +204,7 @@
             <div class="profile-main-info">
                 <div class="profile-info-wrapper">
                     <div class="profile-avatar-container">
-                        <img src="../pictures/Author profile.jpg" alt="Author profile" class="profile-avatar">
+                        <img src="../pictures/author profile 3.jpg" alt="Author profile" class="profile-avatar">
 <span class="edit-icon profile-edit" onclick="openProfileUploadModal()">✏️</span>
                     </div>
 
