update branch 'main' of

--- a/My Profile tier 1/church-profile.html
+++ b/My Profile tier 1/church-profile.html
@@ -147,7 +147,10 @@
                     <span class="sidebar-btn-icon">💝</span>
                     <span>Tithes, Offerings and Givings</span>
                 </button>
-
+                <button class="sidebar-btn" data-content="rate-and-comment">
+                    <span class="sidebar-btn-icon">⭐</span>
+                    <span>Rate & Review</span>
+                </button>
             </div>
 
             <!-- EDUCATION SECTION - UNCHANGED -->
@@ -180,10 +183,6 @@
                         <span>Notes</span>
                     </button>
                 </a>
-                <button class="sidebar-btn" data-content="rate-comment">
-                    <span class="sidebar-btn-icon">⭐</span>
-                    <span>Rate & Comment</span>
-                </button>
                 <button class="sidebar-btn" data-content="share">
                     <span class="sidebar-btn-icon">🔗</span>
                     <span>Share</span>
