--- a/My Profile tier 1/tutor-profile.html
+++ b/My Profile tier 1/tutor-profile.html
@@ -168,6 +168,11 @@
                 <span>Videos</span>
                 <span class="sidebar-badge">12</span>
             </button>
+            
+                <button class="sidebar-btn" data-content="image-library">
+                    <span class="sidebar-btn-icon">🖼️</span>
+                    <span>Image Library</span>
+                </button>
             <button class="sidebar-btn" data-content="blog">
                 <span class="sidebar-btn-icon">📝</span>
                 <span>Blog</span>
