--- a/My Profile tier 1/advertiser-profile.html
+++ b/My Profile tier 1/advertiser-profile.html
@@ -104,6 +104,10 @@
                     <span class="sidebar-btn-icon">⚡</span>
                     <span>Activity Feed</span>
                 </button>
+                <button class="sidebar-btn" data-content="ratings-and-reviews">
+                    <span class="sidebar-btn-icon">⭐</span>
+                    <span>Ratings & Reviews</span>
+                </button>
             </div>
             
             <div class="sidebar-section" data-content="education">
@@ -125,11 +129,7 @@
             </div>
             
             <div class="sidebar-section" data-content="permanent">
-                <button class="sidebar-btn" data-content="community">
-                    <span class="sidebar-btn-icon">👥</span>
-                    <span>Community</span>
-                    <span class="sidebar-badge live">Live</span>
-                </button>
+
                 <button class="sidebar-btn" data-content="clubs">
                     <span class="sidebar-btn-icon">🎭</span>
                     <span>Clubs</span>
@@ -150,11 +150,11 @@
                     <span>Blog</span>
                     <span class="sidebar-badge">7</span>
                 </button>
-                <button class="sidebar-btn" data-content="comments">
-                    <span class="sidebar-btn-icon">💬</span>
-                    <span>Comments</span>
-                    <span class="sidebar-badge">15</span>
+                                <button class="sidebar-btn" data-content="image-library">
+                    <span class="sidebar-btn-icon">🖼️</span>
+                    <span>Image Library</span>
                 </button>
+
                 <button class="sidebar-btn" data-content="my-products">
                     <span class="sidebar-btn-icon">📦</span>
                     <span>My Products</span>
@@ -166,10 +166,6 @@
                         <span>Notes</span>
                     </button>
                 </a>
-                <button class="sidebar-btn" data-content="rate-comment">
-                    <span class="sidebar-btn-icon">⭐</span>
-                    <span>Rate & Comment</span>
-                </button>
                 <button class="sidebar-btn" data-content="share">
                     <span class="sidebar-btn-icon">🔗</span>
                     <span>Share</span>
