--- a/My Profile tier 1/parent-profile.html
+++ b/My Profile tier 1/parent-profile.html
@@ -86,9 +86,9 @@
                     <span class="sidebar-btn-icon">📈</span>
                     <span>Engagement</span>
                 </button>
-                <button class="sidebar-btn" data-content="parent-reviews">
+                <button class="sidebar-btn" data-content="ratings-and-reviews">
                     <span class="sidebar-btn-icon">⭐</span>
-                    <span>Reviews & Ratings</span>
+                    <span>Ratings and Reviews</span>
                 </button>
                 <button class="sidebar-btn" data-content="parent-preferences">
                     <span class="sidebar-btn-icon">⚙️</span>
@@ -110,11 +110,7 @@
             </div>
             <!-- UNCHANGED PERMANENT SECTION -->
             <div class="sidebar-section" data-content="permanent">
-                <button class="sidebar-btn" data-content="community">
-                    <span class="sidebar-btn-icon">👥</span>
-                    <span>Community</span>
-                    <span class="sidebar-badge live">Live</span>
-                </button>
+
                 <button class="sidebar-btn" data-content="clubs">
                     <span class="sidebar-btn-icon">🎭</span>
                     <span>Clubs</span>
@@ -130,10 +126,7 @@
                         <span>Notes</span>
                     </button>
                 </a>
-                <button class="sidebar-btn" data-content="rate-comment">
-                    <span class="sidebar-btn-icon">⭐</span>
-                    <span>Rate & Comment</span>
-                </button>
+
                 <button class="sidebar-btn" data-content="share">
                     <span class="sidebar-btn-icon">🔗</span>
                     <span>Share</span>
