--- a/My Profile tier 1/student-profile.html
+++ b/My Profile tier 1/student-profile.html
@@ -158,6 +158,10 @@
                     <span class="sidebar-btn-icon">🎓</span>
                     <span>Become a Tutor</span>
                 </button>
+                                <button class="sidebar-btn" data-content="ratings-and-reviews">
+                    <span class="sidebar-btn-icon">⭐</span>
+                    <span>Ratings & Reviews</span>
+                </button>
             </div>
 
             <div class="sidebar-section" data-content="education">
@@ -179,36 +183,18 @@
             </div>
 
             <div class="sidebar-section" data-content="permanent">
-                <button class="sidebar-btn" data-content="community">
-                    <span class="sidebar-btn-icon">💥</span>
-                    <span>Community</span>
-                    <span class="sidebar-badge live">Live</span>
-                </button>
+
                 <button class="sidebar-btn" data-content="clubs">
                     <span class="sidebar-btn-icon">🎭</span>
                     <span>Clubs</span>
                     <span class="sidebar-badge active">Active</span>
-                </button>
-                <button class="sidebar-btn" data-content="podcasts">
-                    <span class="sidebar-btn-icon">🎙️</span>
-                    <span>Podcasts</span>
-                    <span class="sidebar-badge">5</span>
-                </button>
-                <button class="sidebar-btn" data-content="videos">
-                    <span class="sidebar-btn-icon">🎬</span>
-                    <span>Videos</span>
-                    <span class="sidebar-badge">12</span>
                 </button>
                 <button class="sidebar-btn" data-content="blog">
                     <span class="sidebar-btn-icon">📝</span>
                     <span>Blog</span>
                     <span class="sidebar-badge">7</span>
                 </button>
-                <button class="sidebar-btn" data-content="comments">
-                    <span class="sidebar-btn-icon">💬</span>
-                    <span>Comments</span>
-                    <span class="sidebar-badge">15</span>
-                </button>
+
                 <button class="sidebar-btn" data-content="my-products">
                     <span class="sidebar-btn-icon">📦</span>
                     <span>My Products</span>
@@ -220,10 +206,7 @@
                         <span>Notes</span>
                     </button>
                 </a>
-                <button class="sidebar-btn" data-content="rate-comment">
-                    <span class="sidebar-btn-icon">⭐</span>
-                    <span>Rate & Comment</span>
-                </button>
+
                 <button class="sidebar-btn" data-content="share">
                     <span class="sidebar-btn-icon">🔗</span>
                     <span>Share</span>
