updated some profile pages and added bookstore css

--- a/View profile tier 1/view-church.html
+++ b/View profile tier 1/view-church.html
@@ -76,6 +76,10 @@
                     <span>Listen sermons</span>
                     <span class="sidebar-badge">5</span>
                 </button>
+                <button class="sidebar-btn" data-content="image-library">
+                    <span class="sidebar-btn-icon">🖼️</span>
+                    <span>Image Library</span>
+                </button>
                 <button class="sidebar-btn" data-content="blog">
                     <span class="sidebar-btn-icon">📝</span>
                     <span>Blogs</span>
@@ -106,8 +110,8 @@
                 </button>
                 <button class="sidebar-btn" data-content="join-groups">
                     <span class="sidebar-btn-icon">👥</span>
-                    <span>Small Groups</span>
-                    <span class="sidebar-badge">8</span>
+                    <span>Clubs</span>
+                    <span class="sidebar-badge active">Active</span>
                 </button>
                 <button class="sidebar-btn" data-content="give-donation">
                     <span class="sidebar-btn-icon">💝</span>
@@ -400,19 +404,19 @@
                         <h3>Our Ministries</h3>
                         <div class="ministries-grid">
                             <!-- Add this as a special card in the ministries-grid -->
-<div class="ministry-card salvation-card">
-    <span class="ministry-icon">✝️</span>
-    <h4>Souls Saved This Year</h4>
-    <div class="salvation-number">1,247</div>
-    <p>Lives transformed through Christ</p>
-    <div class="salvation-progress">
-        <div class="progress-bar">
-            <div class="progress-fill" style="width: 78%"></div>
-        </div>
-        <span class="progress-text">78% of yearly goal (1,600)</span>
-    </div>
-    <button class="btn-view-testimonies">View Testimonies</button>
-</div>
+                            <div class="ministry-card salvation-card">
+                                <span class="ministry-icon">✝️</span>
+                                <h4>Souls Saved This Year</h4>
+                                <div class="salvation-number">1,247</div>
+                                <p>Lives transformed through Christ</p>
+                                <div class="salvation-progress">
+                                    <div class="progress-bar">
+                                        <div class="progress-fill" style="width: 78%"></div>
+                                    </div>
+                                    <span class="progress-text">78% of yearly goal (1,600)</span>
+                                </div>
+                                <button class="btn-view-testimonies">View Testimonies</button>
+                            </div>
                             <div class="ministry-card">
                                 <span class="ministry-icon">👶</span>
                                 <h4>Children's Ministry</h4>
@@ -574,7 +578,7 @@
                         </div>
                     </section>
 
-                                        <!-- Awards Showcase -->
+                    <!-- Awards Showcase -->
                     <section class="awards-section">
                         <h2 class="section-title">Ministry Recognition</h2>
                         <div class="awards-grid">
