--- a/View profile tier 1/view-tutor.html
+++ b/View profile tier 1/view-tutor.html
@@ -386,6 +386,10 @@
                     <span>Podcasts</span>
                     <span class="sidebar-badge">5</span>
                 </button>
+                <button class="sidebar-btn" data-content="image-library">
+                    <span class="sidebar-btn-icon">🖼️</span>
+                    <span>Image Library</span>
+                </button>
                 <button class="sidebar-btn" data-content="blog">
                     <span class="sidebar-btn-icon">📝</span>
                     <span>Blogs</span>
