--- a/My Profile tier 1/advertiser-profile.html
+++ b/My Profile tier 1/advertiser-profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EduAds Inc. - Elite Advertiser Profile | Astegni</title>
+    <title>Astegni - Advertiser Profile</title>
     <link rel="stylesheet" href="../css/institute.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
