--- a/My Profile tier 1/church-profile.html
+++ b/My Profile tier 1/church-profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pastor David Emmanuel - Religious Leader Profile | Astegni</title>
+    <title>Astegni - Church Profile</title>
     <link rel="stylesheet" href="../css/institute.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/church-profile.css">
