--- a/View profile tier 1/view-author.html
+++ b/View profile tier 1/view-author.html
@@ -252,7 +252,7 @@
 
                     <div class="profile-details-section">
                         <div class="profile-name-row">
-                            <h1 class="center-name" id="centerName">Sarah Mitchell</h1>
+                            <h1 class="center-name" id="centerName">View Author</h1>
                             <div class="badges-row">
                                 <span class="verified-badge">✓ Verified Author</span>
                                 <span class="center-score">Bestseller</span>
