--- a/View profile tier 1/view-church.html
+++ b/View profile tier 1/view-church.html
@@ -124,7 +124,7 @@
             </div>
 
             <!-- User Actions -->
-            <div class="sidebar-section" data-content="actions">
+            <div class="sidebar-section" data-content="my-actions">
                 <button class="sidebar-btn" data-content="my-purchases">
                     <span class="sidebar-btn-icon">📦</span>
                     <span>My Purchases</span>
@@ -205,19 +205,19 @@
         <!-- Profile Header Section - Always Visible -->
         <section class="profile-header-section">
             <div class="cover-image-container">
-                <img src="../pictures/Begashaw Aroma cover.jpg" alt="Cover" class="cover-img">
+                <img src="../pictures/jesus cover.jpg" alt="Cover" class="cover-img">
                 <div class="cover-overlay"></div>
             </div>
 
             <div class="profile-main-info">
                 <div class="profile-info-wrapper">
                     <div class="profile-avatar-container">
-                        <img src="../pictures/Begashaw Aroma profile.jpg" alt="Church profile" class="profile-avatar">
+                        <img src="../pictures/Jesus  profile.jpg" alt="Church profile" class="profile-avatar">
                     </div>
 
                     <div class="profile-details-section">
                         <div class="profile-name-row">
-                            <h1 class="center-name" id="centerName">Aroma International</h1>
+                            <h1 class="center-name" id="centerName">View church</h1>
                             <div class="badges-row">
                                 <span class="verified-badge">✔ Verified Religious Institution</span>
                             </div>
