--- a/View profile tier 1/view-parent.html
+++ b/View profile tier 1/view-parent.html
@@ -193,7 +193,7 @@
 
                     <div class="profile-details-section">
                         <div class="profile-name-row">
-                            <h1 class="center-name" id="centerName">Mulugeta Alemu</h1>
+                            <h1 class="center-name" id="centerName">View parent</h1>
                             <div class="badges-row">
                                 <span class="verified-badge">✓ Verified Parent</span>
                                 <span class="center-score">Engagement Score: 92/100</span>
