--- a/View profile tier 1/view-student.html
+++ b/View profile tier 1/view-student.html
@@ -197,7 +197,7 @@
 
                     <div class="profile-details-section">
                         <div class="profile-name-row">
-                            <h1 class="center-name" id="centerName">John Doe - Student</h1>
+                            <h1 class="center-name" id="centerName">View student</h1>
                             <div class="badges-row">
                                 <span class="verified-badge">✔ Active Student</span>
                                 <span class="center-score">GPA: 3.8/4.0</span>
