--- a/View profile tier 1/view-tutor.html
+++ b/View profile tier 1/view-tutor.html
@@ -475,7 +475,7 @@
 
                     <div class="profile-details-section">
                         <div class="profile-name-row">
-                            <h1 class="center-name" id="tutorName">Dr. Sarah Johnson</h1>
+                            <h1 class="center-name" id="tutorName">View tutor</h1>
                             <div class="badges-row">
                                 <span class="verified-badge">✔ Verified Tutor</span>
                                 <span class="certification-badge">🏆 Elite Tutor</span>
