Modified tutor profile to reflect gender change

--- a/My Profile tier 1/tutor-profile.html
+++ b/My Profile tier 1/tutor-profile.html
@@ -492,7 +492,7 @@
                                 <span class="center-score">Rating: <span id="tutor-rating">N/A</span></span>
                             </div>
                             <div class="gender-info">
-                                <span id="tutor-gender">Male</span>
+                                <span id="tutor-gender">Female</span>
                             </div>
                         </div>
 
